--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     border-top-left-radius: 10em;
     border-bottom-left-radius: 10em;
     width: 50em;
+    padding: 1em 0 1em 1em;
 }
 .resultWeather {
     display: flex;
